scss/global.scss
@import "blocks/button";
@import "blocks/column";
@import "blocks/heading";
@import "blocks/separator";
@import "blocks/file";
@import "blocks/latest-comments";
@import "blocks/latest-posts";
@import "blocks/post-title";
@import "blocks/quote";
@import "blocks/list";
@import "blocks/search";

html {
	scroll-behavior: smooth;
}

@media screen and (prefers-reduced-motion: reduce) {
	html {
		scroll-behavior: auto;
	}
}

body {
	-moz-osx-font-smoothing: grayscale;
	-webkit-font-smoothing: antialiased;
}

.wp-block-navigation__submenu-container .wp-block-navigation__submenu-icon {
	margin-right: 1rem;
}

/*
Sticky button is experimental, only use it on the front for screens above 782px width.
*/
@media screen and (min-width: 782px) {
	.is-style-grigora-sticky .wp-block-navigation__responsive-container-open {
		position: fixed;
		top: 2em;
		right: 2em;
	}

	/* Move the sticky position down to adjust for the WordPress admin bar */
	.admin-bar
		.is-style-grigora-sticky
		.wp-block-navigation__responsive-container-open {
		top: calc(2em + 32px);
	}
}

.main-body {
	margin-top: 0px;
	padding: 0px;
}

.main-primary {
	margin-top: 4rem;
	margin-bottom: 4rem;
}

.grigora-sidebar {
	margin-top: 4rem;
	margin-bottom: 4rem;
}

@media screen and (max-width: 600px) {
	.main-primary {
		margin-top: 1.5rem;
		margin-bottom: 1.5rem;
	}

	.grigora-sidebar {
		margin-top: 1.5rem;
		margin-bottom: 1.5rem;
	}
}

.wp-block-column:first-child .grigora-sidebar {
	padding-right: 30px;
}

.wp-block-column:last-child .grigora-sidebar {
	padding-left: 30px;
}

@media screen and (max-width: 768px) {
	.wp-block-column:first-child .grigora-sidebar {
		padding-right: 0px;
	}

	.wp-block-column:last-child .grigora-sidebar {
		padding-left: 0px;
	}
}

h2 a {
	text-decoration: none;
}

.wp-block-post-excerpt__more-link {
	display: block;
	background-color: var(--wp--preset--color--button);
	color: var(--wp--preset--color--buttontext);
	text-align: center;
	margin-top: 10px;
	padding: 5px 0px;
	border-radius: 3px;
}

.wp-block-post-excerpt__more-link:hover {
	filter: brightness(94%);
}

figure {
	max-width: 100% !important;
}

.post-navigation-link-previous a::before {
	content: "← \00a0";
	display: inline-block;
}

.post-navigation-link-next a::after {
	content: "\00a0 →";
	display: inline-block;
}

